fixed numers on mobile

--- a/css/Sass/main.scss
+++ b/css/Sass/main.scss
@@ -41,12 +41,15 @@ body
   margin-left:1vmin;
   margin-bottom:1vmin;
   /*position: absolute;*/
-  font-size:100px;
+  
   text-align: center;
+  /*vertical-align: center;*/
   div
   {
+    font-size:10vmin;
     transition: all $transition-time linear;
     transition: content 0s linear $transition-time/2;
+
   }
 
 }
